# semant-demo

./: .gitignore  README.md  taggingNote.md  tagging_and_user_collection_Notes.md
data_tools/meta_data_enrichment/: MANIFEST.in  README.md  config.yaml  pyproject.toml  run.py
data_tools/meta_data_enrichment/semantmetaenricher/: __init__.py  __main__.py  db.py  models.py  pipeline.py
semant_demo_backend/: README.md  create_default_configurations.py  export_openapi.py  log.txt  pyproject.toml  requirements.txt  run.py  tasks.db  weaviate_add_tag_class.py
semant_demo_backend/db_tools/: db_common.py  db_list_collections.py
semant_demo_backend/semant_demo/: config.py  embedding_router.py  gemma_embedding.py  main.py  ollama_proxy.py  propose.md  rag_generator.py  schemas.py  summary_generator.py  tagging.py  tagging_llm.py  tagging_old.py  weaviate_client.py  weaviate_exceptions.py  weaviate_search.py  weaviate_tag.py
semant_demo_backend/semant_demo/ai_assistance/: span_chat.py  topicer_client.py
semant_demo_backend/semant_demo/configs/: search_summarizer.yaml
semant_demo_backend/semant_demo/llm_api/: api_async.py  base.py
semant_demo_backend/semant_demo/rag/: __init__.py  adaptive_rag.py  adaptive_rag_og.py  adaptive_rag_og_prompts.py  adaptive_rag_prompts.py  agentic_rag.py  incremental_rag.py  incremental_rag_prompts.py  rag_factory.py  rag_generator.py  rag_runner_demo.py  rag_test.py
semant_demo_backend/semant_demo/routes/: __init__.py  ai_assistance_routes.py  collections_routes.py  dependencies.py  document_routes.py  documents_routes.py  feedback_routes.py  propose_tags_routes.py  rag_routes.py  span_chat_routes.py  (+7 more)
(+437 files in other folders)
