[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantdemobackend"
dynamic = ["dependencies"]
version = "0.0.1"
requires-python = ">=3.12"
authors = [
  {name = "Michal Hradiš"},
  {name = "Martin Dočekal"},
]
description = "Backend for demo of SemANT."
readme = "README.md"
keywords = ["SemANT", "backend", "api"]

[project.urls]
Repository = "https://github.com/DCGM/semant-demo"

#[project.scripts]
#semantdemobackend = "semantdemobackend.__main__:main"

[tool.setuptools.packages.find]
include = ["semant_demo*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
