[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantmetaenricher"
version = "0.1.0"
description = "A configurable pipeline for metadata enrichment of Weaviate database records."
readme = "README.md"
authors = [
    { name = "Developer" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "classconfig>=1.0.17",
    "weaviate-client>=4.20.4",
    "openai>=2.0.0",
    "transformers>=4.0.0",
    "tqdm>=4.0.0",
    "PyYAML>=6.0",
    "jinja2>=3.0.0"
]

[project.scripts]
semantmetaenricher = "semantmetaenricher.__main__:main"

[tool.setuptools]
packages = ["semantmetaenricher"]
